--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -55,8 +55,8 @@ extends:
     #       - internal_qa_sandbox
     #     post_deploy:
     #       - template: ./templates/run-tests.yml
-    #   - environment: sandbox
-    #     proxy_path: sandbox
+      - environment: sandbox
+        proxy_path: sandbox
     #     post_deploy:
     #       - template: ./templates/run-tests.yml
     # # Enable int environment when ready by uncommenting:
